Working on basic structure, import and export work

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Restaurant Page</title>
-    <script src="https://unpkg.com/lodash@4.17.20"></script>
+    <!-- <script src="https://unpkg.com/lodash@4.17.20"></script> -->
     <link rel="stylesheet" href="../style.css">
-</head>
+<script defer src="bundle.js"></script></head>
 <body>
-    <script src="main.js"></script>
+
 
     <div id="content">
         <!-- Code here are temporary, once I've figure out the Restaurant Page layout, all code will be moved to JavaScript modules files -->
 
-        <div class="tabbed-browsing">
+        <!-- <div class="sidebar">
             <div class="home">
                 <h2 class="home-section">HOME</h2>
 
@@ -35,14 +35,16 @@
                 <h1 class="restaurant-name">Kobe's Kitch</h1>
                 <h2 class="catch-phrase">We love what we are doing</h2>
             </div>
-        </div>
-
-
+        </div> -->
 
     </div>
     <footer>
         <h3>Developed by Chee Hong "Kobe" Wong</h3>
     </footer>
+
+
     
 </body>
+
+<!-- <script src="bundle.js"></script> -->
 </html>
