Working on basic structure, import and export work

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Project Restaurant Page</title>
     <!-- <script src="https://unpkg.com/lodash@4.17.20"></script> -->
     <link rel="stylesheet" href="../style.css">
-<script defer src="bundle.js"></script></head>
+</head>
 <body>
 
 
