--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Restaurant Page</title>
-    <link rel="stylesheet" href="../style.css">
-<script defer src="bundle.js"></script></head>
-<body>
-    <div id="content">
-
-
-    </div>
-    <footer>
-        <h3>Developed by Chee Hong "Kobe" Wong</h3>
-    </footer>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Project Restaurant Page</title><link rel="stylesheet" href="../style.css"><script defer="defer" src="runtime.bundle.js"></script><script defer="defer" src="app.bundle.js"></script></head><body><div id="content"></div><footer><h3>Developed by Chee Hong "Kobe" Wong</h3></footer></body></html>
